# relikt-arte

./: .gitignore
api/: .gitignore  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 14ecf012e638_user_model.py  247c6e527d21_category_model_priority_column.py  324dbe1f7974_basket_removed_column_session_id_and_it_.py  4a2feae73d75_basket_and_basketitem.py  58f58d3ab63d_product_photo_model_is_main_column.py  6318d6e84532_category_and_productsize_models_with_.py  6ca767716ce5_authtoken_owner_new_email_column.py  75f8d3a3fc7c_some_product_columns_now_can_be_null.py  7cf13775a55c_product_model_photo_column.py  7d5c1e91a7be_user_model.py  7e40f0303831_pickup_column_for_order.py  80e471d5edda_product_photo_model_remove_glass_color_.py  83325e4a05ea_product_and_rel_models.py  86a8807b31ed_category_and_size_association_cascade_.py  8801290da751_product_sku_column.py  8bd9ee3694a9_order_and_orderitem_models.py  8c2955d2ba3a_product_models.py  93887609ab79_product_added_material_choice_and_type_.py  a24ef4d8936a_order_status_date_to_column.py  ca0af79f0942_productphoto_columns_for_identation_of_.py  cbe214c24453_auth_token_model.py  e8e941fc8a42_product_model_name_column.py  f0911a7ca150_product_photo.py
api/nginx/templates/: app.conf.template
api/scripts/: celery.sh  create_admin.sh  run.sh
api/src/: main.py
api/src/admin/: model_views.py
api/src/core/: caching.py  celery.py  config.py  dependencies.py  schemas.py
api/src/letter/: router.py  schemas.py  service.py  tasks.py  utils.py
api/src/nova_post/: router.py  schemas.py  utils.py
api/src/order/: enums.py  mixins.py  models.py  router.py  schemas.py  service.py  tasks.py  utils.py
api/supervisor/: supervisord.conf
web/: .gitignore  (+2 more)
(+258 files in other folders)
