[tool.poetry]
name = "relict-arte-api"
version = "0.1.0"
description = "Relict Arte API"
authors = ["Oleg Kuzmenko <okuzmenko31us@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
psycopg = {version = "^3.1.19", extras = ["binary", "pool"]}
celery = "^5.4.0"
gunicorn = "^22.0.0"
flower = "^2.0.1"
redis = "^5.0.4"
redis-cli = "^1.0.1"
passlib = "^1.7.4"
email-validator = "^2.1.1"
fastapi-mail = "^1.4.1"
python-jose = "^3.3.0"
requests = "^2.32.3"
aiofiles = "^24.1.0"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
